# deskAssistant

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: toolchain-jetson-orin-nano.cmake  toolchain-pi-zero-2.cmake
config/: desk-assistant.env.example  desk-assistant.service  mosquitto.conf  uart.conf.example
esp32/: uart_blink_test.ino  uart_mqtt_bridge.ino
esp32/blink/: blink.ino
esp32/pca9685_servo/: pca9685_servo.ino
esp32/ps4_controller/: ps4_controller.ino  ps4_host.cpp  ps4_host.h
include/: mqtt_client.hpp  uart_bridge.hpp  uart_protocol.hpp
pi/: DEV_SYNC.txt  PUSH_AND_RUN.txt  install_bot_brain.sh  sync_to_pi.ps1  sync_to_pi.sh
pi/bot_brain/: main.py
pi/bot_brain/emotions_library/: __init__.py  catalog.py  engine.py
pi/bot_brain/esp32_connection/: __init__.py  link.py
pi/bot_brain/screen/: __init__.py  animations.py  display.py
pi/bot_brain/servo_commands/: __init__.py  commands.py
pi/scripts/: gc9a01_test.py  setup_display_venv_pi.sh  spi_display_scaffold.py  test_emotions.py  test_emotions_display.py
reporting-api/: README.md  config.py  main.py  mqtt_handler.py  requirements.txt  store.py
reporting-api/config/: reporting-api.env.example  reporting-api.service
reporting-api/scripts/: run.sh
scripts/: Build-Native.ps1  Build-PiZero2.ps1  blink_test_requirements.txt  build-jetson-orin-nano.sh  build-native.sh  build-pi-zero-2.sh  pi_blink_test.py  requirements-display-pi.txt  setup_display_venv_pi.sh  spi_display_scaffold.py
src/: main.cpp  mqtt_client.cpp  uart_bridge.cpp
